# trafficreplaylibrary

./: .gitignore  CHANGES.txt  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
src/: replay-sample.json  test.py
src/trlib/: __init__.py  loader.py  replay_format.json  taskpool.py
src/trlib/dom/: __init__.py  content.py  dom.py  field.py  header.py  request.py  response.py  session.py  transaction.py
src/trlib/parser/: attribute.py  metatyping.py  parse.py
